--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,6 @@
 }
 
 
-
 #menu-admin .header-admin {
     padding: 20px;
     background: wheat;
@@ -84,22 +83,25 @@
     position: fixed;
     width: 100%;
     z-index: 9;
-    background-color: #A3A1A0 !important;
+    background-color: antiquewhite !important;
     opacity: 0.9;
     box-shadow: 0px 10px 10px -6px black;
 }
-.navbar a{
-  color: #0c0c0c;
+
+.navbar a {
+    color: #0c0c0c;
 }
 
-
+#login-user {
+    box-shadow: 0px 10px 10px -6px black;
+}
 
 
 .block-2 {
     padding-top: 100px;
 }
 
-.login-user-front, #new-user,#front-show-user,#new-service,.image-home-admin,.user-admin-index,.task-admin-index,#new-multi-task,#new-company,#show-task{
+.login-user-front, #new-user, #front-show-user, #new-service, .image-home-admin, .user-admin-index, .task-admin-index, #new-multi-task, #new-company, #show-task {
     padding-top: 100px;
     width: 90%;
     margin: auto;
@@ -165,10 +167,8 @@ footer {
 }
 
 
-
-
 /*TODO ADMIN*/
 
-#front-show-user span{
-    color:blue;
+#front-show-user span {
+    color: blue;
 }
