--- a/templates/Admin/company/edit.html.twig
+++ b/templates/Admin/company/edit.html.twig
@@ -5,7 +5,7 @@
         {{ parent() }}
     {% endblock %}
     <section id="new-service">
-        <div class="container">
+        <div class="container-jumbotron">
             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                 {{ form_start(formCompany,{ 'attr': {'enctype': 'multipart/form-data' } ,'name':'editCompany'}) }}
                 <div class="row">
