--- a/templates/Admin/service/edit.html.twig
+++ b/templates/Admin/service/edit.html.twig
@@ -6,7 +6,7 @@
         {{ parent() }}
     {% endblock %}
     <section id="new-service">
-        <div class="container">
+        <div class="container-jumbotron">
             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
             {{ form_start(formService,{ 'attr': {'enctype': 'multipart/form-data' } ,'name':'editService'}) }}
             <div class="row">
