--- a/templates/Admin/service/index.html.twig
+++ b/templates/Admin/service/index.html.twig
@@ -6,10 +6,10 @@
         {{ parent() }}
     {% endblock %}
     <section id="new-service">
-        <div class="container">
+        <div class="container-jumbotron">
             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                 <h1>Servicios
-                    {% if  is_granted('ROLE_SUPER_ADMIN') %}
+                    {% if  is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
                         <a style="color: #1d2124;float: right" href="{{ path('newservice') }}"
                            class="nav-item nav-link"><b><i class="bi bi-bag-plus-fill"></i></b></a>
                     {% endif %}
