--- a/templates/Admin/service/new.html.twig
+++ b/templates/Admin/service/new.html.twig
@@ -6,7 +6,7 @@
         {{ parent() }}
     {% endblock %}
     <section id="new-service">
-        <div class="container">
+        <div class="container-jumbotron">
             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                 {{ form_start(formService,{ 'attr': {'enctype': 'multipart/form-data' } }) }}
                 <div class="row">
@@ -18,9 +18,13 @@
                     <div class="form-group col-md-6">
                         <label>Empresa :</label>
                         <select name="company" class="form-select">
-                            {% for comp in company %}
-                                <option value="{{ comp.id }}">{{ comp.name|e }}</option>
-                            {% endfor %}
+                            {% if is_granted('ROLE_SUPER_ADMIN') %}
+                                {% for comp in company %}
+                                    <option value="{{ comp.id }}">{{ comp.name|e }}</option>
+                                {% endfor %}
+                            {% else %}
+                                <option value="{{ company.id }}" selected>{{ company.name|e }}</option>
+                            {% endif %}
                         </select>
                     </div>
                 </div>
