--- a/templates/Admin/service/show.html.twig
+++ b/templates/Admin/service/show.html.twig
@@ -6,7 +6,7 @@
         {{ parent() }}
     {% endblock %}
     <section id="new-service">
-        <div class="container">
+        <div class="container-jumbotron">
             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                 <a href="{{ path("service") }}">
                     <button class="btn btn-warning">Volver</button>
