--- a/templates/Admin/task/new.html.twig
+++ b/templates/Admin/task/new.html.twig
@@ -7,7 +7,7 @@
     {% endblock %}
     <section id="new-multi-task">
 
-        <div class="container">
+        <div class="container-jumbotron">
             <div class="row">
                 <div class="col-md-6"><h1>Nueva tarea</h1></div>
                 <div class="col-md-6"><a style="float: right" href="{{ path('admin.task') }}" class="nav-item nav-link"><b>Listado
