--- a/templates/Admin/user/edit.html.twig
+++ b/templates/Admin/user/edit.html.twig
@@ -6,7 +6,7 @@
         {{ parent() }}
     {% endblock %}
     <section id="new-user">
-        <div class="container">
+        <div class="container-jumbotron">
             <div class="row">
                 <div class="col-md-6"><h1>Modifica usuario: {{ user.username }}</h1></div>
                 <div class="col-md-6"><a style="float: right" href="{{ path('admin.user') }}" class="nav-item nav-link"><b>Listado
