--- a/templates/Admin/user/new.html.twig
+++ b/templates/Admin/user/new.html.twig
@@ -7,7 +7,7 @@
     {% endblock %}
     <section id="new-user">
 
-        <div class="container">
+        <div class="container-jumbotron">
             <h2>Nuevo usuario</h2>
             <p id="info-admin"></p>
             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
