--- a/templates/Admin/user/show.html.twig
+++ b/templates/Admin/user/show.html.twig
@@ -4,7 +4,7 @@
     {% block nav %}
         {{ parent() }}
     {% endblock %}
-    <div class="container" id="front-show-user">
+    <div class="container-jumbotron" id="front-show-user">
         <div class="row">
             <div class="col-md-6"><h3>Información del usuario </h3></div>
             <div class="col-md-6"><a style="float: right" href="{{ path('admin.user') }}" class="nav-item nav-link"><b>Listado
