--- a/templates/Front/default/index.html.twig
+++ b/templates/Front/default/index.html.twig
@@ -7,8 +7,8 @@
         {{ parent() }}
 
     {% endblock %}
-    <div class="container img-responsive image-home-admin hidden-md">
-        <img class="img-fluid"
+    <div class="container-jumbotron img-responsive image-home-admin hidden-md">
+        <img style="width: 60%"
              src="https://comunidades.cepal.org/elac/sites/elac/files/styles/640x320/public/group-images/Transformaci%C3%B3n%20digital%20y%20econom%C3%ADa%20digital_0.jpg?h=2a647c80&itok=NQZYH16l"
              alt="CoolBrand">
     </div>
