--- a/templates/Admin/task/new.html.twig
+++ b/templates/Admin/task/new.html.twig
@@ -66,8 +66,6 @@
                         </select>
                         <div id="check"></div>
                     </div>
-
-
                 </div>
                 <br>
                 <div class="row">
@@ -84,10 +82,25 @@
                 </div>
                 <br>
                 <div class="row mb-4">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-3">
                         <label>Estado:</label>
                         {{ form_widget(formTask.state,{ 'attr': {'class': 'form-select','placeholder':'Estado de la tarea' } }) }}
                         {{ form_errors(formTask.state) }}
+                    </div>
+                    <div class="form-group col-md-3">
+                        <label>Selecciona la opción periódica:</label>
+                        <select name="period" class="form-select">
+                            <option value="" selected>Solo una vez</option>
+                            <option value="1">1 día</option>
+                            <option value="2">7 días</option>
+                            <option value="3">15 días</option>
+                            <option value="5">30 días</option>
+                            <option value="6">3 meses</option>
+                            <option value="7">9 meses</option>
+                            <option value="8">6 meses</option>
+                            <option value="9">1 año</option>
+                            <option value="10">2 años</option>
+                        </select>
                     </div>
 
                     <div class="form-group col-md-6 mt-4">
