added Periodic task for users. added command  cron periodic task(execute each 24h).

--- a/templates/Admin/task/new.html.twig
+++ b/templates/Admin/task/new.html.twig
@@ -93,13 +93,13 @@
                             <option value="" selected>Solo una vez</option>
                             <option value="1">1 día</option>
                             <option value="2">7 días</option>
-                            <option value="3">15 días</option>
-                            <option value="5">30 días</option>
-                            <option value="6">3 meses</option>
-                            <option value="7">9 meses</option>
-                            <option value="8">6 meses</option>
-                            <option value="9">1 año</option>
-                            <option value="10">2 años</option>
+                            <option value="3">14 días</option>
+                            <option value="4">1 mes</option>
+                            <option value="5">3 meses</option>
+                            <option value="6">9 meses</option>
+                            <option value="7">6 meses</option>
+                            <option value="8">1 año</option>
+                            <option value="9">2 años</option>
                         </select>
                     </div>
 
