--- a/templates/Admin/user/new.html.twig
+++ b/templates/Admin/user/new.html.twig
@@ -87,6 +87,49 @@
                         {{ form_errors(formUser.information) }}
                     </div>
                 </div>
+
+
+
+                {#  Todo Form Info Client: #}
+                <fieldset class="mt-3" style="padding: 20px;border-radius: 5px; background:whitesmoke"
+                          id="new-info-client">
+                    <legend>Cliente</legend>
+
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                            <label>Dirección cliente:</label>
+                            <input class="form-control" placeholder="Dirección" name="address" value="">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>Provincia:</label>
+                            <input class="form-control" placeholder="Provincia" name="province" value="">
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label>Población:</label>
+                            <input class="form-control" placeholder="Población" name="town" value="">
+                        </div>
+
+                        <div class="form-group col-md-2">
+                            <label>número:</label>
+                            <input class="form-control" type="number" placeholder="Número" name="number" value="">
+
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label>Código postal:</label>
+                            <input class="form-control" type="text" placeholder="Código Postal" name="cp" value="">
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="form-group col-md-2">
+                            <label>Teléfono adicional:</label>
+                            <input class="form-control" type="text" placeholder="Teléfono adicional" name="otherTlf" value="">
+                        </div>
+                        <div class="form-group col-md-10">
+                            <label>Información extra :</label>
+                            <textarea class="form-control" name="infoExtra" placeholder="Información extr"></textarea>
+                        </div>
+                    </div>
+                </fieldset>
                 <div class="row mt-2 text-center mb-4">
                     <div class="col-md-12">
                         <div id="info-user"></div>
