--- a/templates/Admin/task/new.html.twig
+++ b/templates/Admin/task/new.html.twig
@@ -102,8 +102,17 @@
                             <option value="9">2 años</option>
                         </select>
                     </div>
-
+                        <div class="col-md-3">
+                            <label>Selecciona Cliente:</label>
+                            <select name="client" class="form-select">
+                                {% for client in clients %}
+                                    <option value="{{ client.id }}">{{ client.name|e }} {{ client.lastname }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
                     <div class="form-group col-md-6 mt-4">
+
+
                         <div id="info-task"></div>
                         <button class="btn btn-dark" type="submit">Crear</button>
                     </div>
