--- a/templates/Admin/user/show.html.twig
+++ b/templates/Admin/user/show.html.twig
@@ -7,8 +7,10 @@
     <div class="container-jumbotron" id="front-show-user">
         <div class="row">
             <div class="col-md-6"><h3>Información del usuario </h3></div>
-            <div class="col-md-6"><a style="float: right" href="{{ path('admin.user') }}" class="nav-item nav-link"><b>Listado
-                        de Usuarios</b></a></div>
+            {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
+                <div class="col-md-6"><a style="float: right" href="{{ path('admin.user') }}" class="nav-item nav-link"><b>Listado
+                            de Usuarios</b></a></div>
+            {% endif %}
         </div>
         <br>
         <div class="row">
@@ -30,12 +32,13 @@
             </div>
 
             <div class="col-md-3 text-center">
-
                 {% if not is_granted('ROLE_OPERATOR') %}
-                    <br>
-                    <a href="#" style="float: right">
-                        <button class="btn btn-dark" id="btn-task-admin">Asignar nueva tarea</button>
-                    </a>
+                    {% if  user.type == 'operator' %}
+                        <br>
+                        <a href="#" style="float: right">
+                            <button class="btn btn-dark" id="btn-task-admin">Asignar nueva tarea</button>
+                        </a>
+                    {% endif %}
                 {% endif %}
             </div>
         </div>
@@ -49,54 +52,59 @@
 
         <hr>
 
-        <div class="row">
-            <h3>Tareas pendientes </h3>
-            <div class="col-md-12 mt-2">
-                {% if taskUser %}
-                <ul>
-                    {% for task in taskUser %}
-                        <li style="list-style: none">
-                            <h6>{{ task.title|upper }}  <a href="" style="color:gray;float: right;font-size: 1.8em"><i class="bi bi-gear"></i></a></h6>
-                            <div style="float: right">
+        {#        <div class="row"> #}
+        {#            <h3>Tareas pendientes </h3> #}
+        {#            <div class="col-md-12 mt-2"> #}
+        {#                {% if taskUser %} #}
+        {#                <ul> #}
+        {#                    {% for task in taskUser %} #}
+        {#                        <li style="list-style: none"> #}
+        {#                            <h6>{{ task.title|upper }}  <a href="" style="color:gray;float: right;font-size: 1.8em"><i class="bi bi-gear"></i></a></h6> #}
+        {#                            <div style="float: right"> #}
 
-                                <b>Vista:
-                                    {% if task.viewOperator ==0 %}
-                                        <span style="color:red">No</span>
-                                    {% else %}
-                                        <span style="color:green">Si</span>
-                                    {% endif %}
-                                </b>
-                                <br>
-                                <b>Estado: {% if task.state == 0 %}
-                                        <span style="color: red">Pendiente</span>
-                                    {% elseif  task.state == 1 %}
-                                        <span style="color: orange">En proceso</span>
-                                    {% elseif task.state == 2 %}
-                                        <span style="color: blue">Realizado</span>
-                                    {% else %}
-                                        <span style="color:green">Verificado</span>
-                                    {% endif %}
-                                </b>
-                            </div>
-                            <b>Servicio:</b> <span>
-                                    {% if task.service %}
-                                        {{ task.service.name }}
-                                    {% else %}
-                                        Sin especificar
-                                    {% endif %}
-                                </span>
-                            <p><b>Descripción: </b><i style="color:blue"> {{ task.description }}</i></p>
-                            <p><b>Material: </b><i style="color:blue"> {{ task.material }}</i></p>
-                        </li>
-                        <hr>
-                    {% endfor %}
-                </ul>
-            </div>
-            {% else %}
-                <p style="color:blue">No hay tareas pendientes. Añada alguna tarea
-                    para {{ user.name }} {{ user.lastname }}</p>
-            {% endif %}
-        </div>
+        {#                                <b>Vista: #}
+        {#                                    {% if task.viewOperator ==0 %} #}
+        {#                                        <span style="color:red">No</span> #}
+        {#                                    {% else %} #}
+        {#                                        <span style="color:green">Si</span> #}
+        {#                                    {% endif %} #}
+        {#                                </b> #}
+        {#                                <br> #}
+        {#                                <b>Estado: {% if task.state == 0 %} #}
+        {#                                        <span style="color: red">Pendiente</span> #}
+        {#                                    {% elseif  task.state == 1 %} #}
+        {#                                        <span style="color: orange">En proceso</span> #}
+        {#                                    {% elseif task.state == 2 %} #}
+        {#                                        <span style="color: blue">Realizado</span> #}
+        {#                                    {% else %} #}
+        {#                                        <span style="color:green">Verificado</span> #}
+        {#                                    {% endif %} #}
+        {#                                </b> #}
+        {#                            </div> #}
+        {#                            <b>Servicio:</b> <span> #}
+        {#                                    {% if task.service %} #}
+        {#                                        {{ task.service.name }} #}
+        {#                                    {% else %} #}
+        {#                                        Sin especificar #}
+        {#                                    {% endif %} #}
+        {#                                </span> #}
+        {#                            <p><b>Descripción: </b><i style="color:blue"> {{ task.description }}</i></p> #}
+        {#                            <p><b>Material: </b><i style="color:blue"> {{ task.material }}</i></p> #}
+        {#                        </li> #}
+        {#                        <hr> #}
+        {#                    {% endfor %} #}
+        {#                </ul> #}
+        {#            </div> #}
+        {#            {% else %} #}
+        {#                <p style="color:blue">No hay tareas pendientes. Añada alguna tarea #}
+        {#                    para {{ user.name }} {{ user.lastname }}</p> #}
+        {#            {% endif %} #}
+        {#        </div> #}
+
+
+
+
+
 
 
         {% if user.type == 'operator' %}
