--- a/templates/Admin/user/showClient.html.twig
+++ b/templates/Admin/user/showClient.html.twig
@@ -23,27 +23,45 @@
         </table>
     </fieldset>
     {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <div id="admin-task-client" class="table-responsive">Loading...</div>
-        <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
-        <script>
-            $(function () {
-                $('#admin-task-client').initDataTables({{ datatable_settings(datatable) }}
-                    , {
-                        searching: true,
-                        dom: '<"html5buttons"B>lTfgitp',
-                        buttons: [
-                            'copy',
-                            {extend: 'pdf', title: 'domains'},
-                            {extend: 'print'}
-                        ]
-                    }).then(function (dt) {
-                    // dt contains the initialized instance of DataTables
-                    dt.on('draw',
-                        function () {
-                        })
+        <div class="mb-5 mt-5">
+
+            <div id="admin-task-client" class="table-responsive">Loading...</div>
+            <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
+            <script>
+                $(function () {
+                    $('#admin-task-client').initDataTables({{ datatable_settings(datatable) }}
+                        , {
+                            searching: true,
+                            dom: '<"html5buttons"B>lTfgitp',
+                            buttons: [
+                                'copy',
+                                {extend: 'pdf', title: 'domains'},
+                                {extend: 'print'}
+                            ]
+                        }).then(function (dt) {
+                        // dt contains the initialized instance of DataTables
+                        dt.on('draw',
+                            function () {
+                                $('#admin-task-client table tr').click(function (e) {
+                                    e.preventDefault();
+                                    var id_task = $(this).attr('id');
+                                    $.ajax({
+                                        type: 'POST',
+                                        url: Routing.generate('ajax.admin.show.task'),
+                                        data: {id: id_task},
+                                        async: true,
+                                        success: function (data, status, object) {
+                                            location.href = '/admin/task/show/' + data;
+                                        },
+                                        error: function () {
+                                        }
+                                    });
+                                });
+                            })
+                    });
                 });
-            });
-        </script>
+            </script>
+        </div>
     {% endif %}
 </div>
 </div>
